crates/ir/tests/ir/snapshots/main__ir__lower__json__from_json_bool.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__from_json_bool

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/json/JBool as JBool(Bool) -> Json
import core/json/JNum as JNum(Float) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JBool#1(true)
  let v2: Dict[core/json.FromJson, Bool] = get_dict core/json.FromJson[Bool]
  let v0: Result[String, Bool] = trait_call core/json.FromJson.from_json(v2, v1)
  switch v0 {
    0 (v3: Bool) ->
      let v4: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
      let v5: Unit = call println(v4, v3)
      v5
    1 (v6: String) ->
      let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v8: Unit = call println(v7, v6)
      v8
  }
