crates/ir/tests/ir/snapshots/main__ir__lower__json__from_json_list.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__from_json_list

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/Cons as Cons(j, List[j]) -> List[j]
import core/list/length as length(List[z]) -> Int
import core/json/JNum as JNum(Float) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JBool as JBool(Bool) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare length: (List[z]) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JNum#2(1.0)
  let v2: Json = construct Json::JNum#2(2.0)
  let v3: Json = construct Json::JNum#2(3.0)
  let v4: List[Json] = construct List::Nil#1()
  let v5: List[Json] = construct List::Cons#0(v3, v4)
  let v6: List[Json] = construct List::Cons#0(v2, v5)
  let v7: List[Json] = construct List::Cons#0(v1, v6)
  let v0: Json = construct Json::JArr#4(v7)
  let v9: Dict[core/json.FromJson, Int] = get_dict core/json.FromJson[Int]
  let v10: Dict[core/json.FromJson, List[Int]] = make_dict core/json.FromJson[List[Int]](v9)
  let v8: Result[String, List[Int]] = trait_call core/json.FromJson.from_json(v10, v0)
  switch v8 {
    0 (v11: List[Int]) ->
      let v13: Int = call length(v11)
      let v12: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v14: Unit = call println(v12, v13)
      v14
    1 (v15: String) ->
      let v16: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v17: Unit = call println(v16, v15)
      v17
  }
