crates/ir/tests/ir/snapshots/main__ir__lower__json__from_json_map.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__from_json_map

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/list/Cons as Cons(j, List[j]) -> List[j]
import core/map/get as get(Map[p10, b11], p10) -> Option[b11]
import core/option/Some as Some(f) -> Option[f]
import core/json/JBool as JBool(Bool) -> Json
import core/json/JNum as JNum(Float) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
import core/map/from_list as from_list(List[(j14, k14)]) -> Map[j14, k14]
declare from_list: (List[(j14, k14)]) -> Map[j14, k14]
declare get: (Map[p10, b11], p10) -> Option[b11]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JNum#2(42.0)
  let v2: (String, Json) = tuple("x", v1)
  let v3: List[(String, Json)] = construct List::Nil#1()
  let v4: List[(String, Json)] = construct List::Cons#0(v2, v3)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v7: Map[String, Json] = call from_list(v5, v6, v4)
  let v0: Json = construct Json::JObj#5(v7)
  let v9: Dict[core/json.FromJson, Int] = get_dict core/json.FromJson[Int]
  let v10: Dict[core/json.FromJson, Map[String, Int]] = make_dict core/json.FromJson[Map[String, Int]](v9)
  let v8: Result[String, Map[String, Int]] = trait_call core/json.FromJson.from_json(v10, v0)
  switch v8 {
    0 (v11: Map[String, Int]) ->
      let v12: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
      let v13: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
      let v14: Option[Int] = call get(v12, v13, v11, "x")
      switch v14 {
        0 (v15: Int) ->
          let v16: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v17: Unit = call println(v16, v15)
          v17
        1 ->
          let v18: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v19: Unit = call println(v18, "missing")
          v19
      }
    1 (v20: String) ->
      let v21: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v22: Unit = call println(v21, v20)
      v22
  }
