crates/ir/tests/ir/snapshots/main__ir__lower__json__json_array.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_array

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/Cons as Cons(d, List[d]) -> List[d]
import core/json/JNum as JNum(Float) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/JBool as JBool(Bool) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare json_to_string: (Json) -> String
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JNum#2(1.0)
  let v2: Json = construct Json::JNum#2(2.0)
  let v3: Json = construct Json::JNum#2(3.0)
  let v4: List[Json] = construct List::Nil#1()
  let v5: List[Json] = construct List::Cons#0(v3, v4)
  let v6: List[Json] = construct List::Cons#0(v2, v5)
  let v7: List[Json] = construct List::Cons#0(v1, v6)
  let v0: Json = construct Json::JArr#4(v7)
  let v9: String = call json_to_string(v0)
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v8, v9)
  v10
