crates/ir/tests/ir/snapshots/main__ir__lower__json__json_array_nested.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_array_nested

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/Cons as Cons(j, List[j]) -> List[j]
import core/json/JNum as JNum(Float) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/parse_json as parse_json(String) -> Result[String, Json]
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/JBool as JBool(Bool) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare json_to_string: (Json) -> String
declare parse_json: (String) -> Result[String, Json]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Result[String, Json] = call parse_json("[1,2,3]")
  switch v0 {
    0 (v1: d) ->
      switch v1 {
        4 (v2: List[Json]) ->
          let v4: Json = construct Json::JArr#4(v2)
          let v5: String = call json_to_string(v4)
          let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v6: Unit = call println(v3, v5)
          v6
        _ ->
          let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v8: Unit = call println(v7, "FAIL")
          v8
      }
    _ ->
      let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v10: Unit = call println(v9, "FAIL")
      v10
  }
