crates/ir/tests/ir/snapshots/main__ir__lower__json__json_bool.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_bool

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/json/JBool as JBool(Bool) -> Json
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/JNum as JNum(Float) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare json_to_string: (Json) -> String
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Json = construct Json::JBool#1(true)
  let v1: String = call json_to_string(v0)
  let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v3: Unit = call println(v2, v1)
  let v5: Json = construct Json::JBool#1(false)
  let v6: String = call json_to_string(v5)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v4, v6)
  v7
